# ai-filesense

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PORTFOLIO.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
docs/: ACTIVITY_LOG_SCHEMA.md  DOCUMENTATION_INDEX.md  FREE_TIER_POLICIES.md  LESSONS_LEARNED.md  MARKETING_FEATURES.md  ORGANIZATION_SYSTEM.md  WEBSITE_PRD.md  classification-schema.json  classification_validator.py
docs/Redesign-Plan/: 00-overview-and-index.md  01-ai-personalization-strategy.md  02-user-journey.md  03-taxonomy-and-vocabulary.md  04-ai-prompts-and-schemas.md  05-decision-logic.md  06-ui-specifications.md  07-activity-log-system.md  08-auto-organize-service.md  09-error-handling.md  10-installer-onboarding.md  11-settings-specifications.md  12-analytics-telemetry.md  13-localization-strategy.md  14-testing-strategy.md  15-redesign-plan.md  16-website-copy-recommendations.md  phase1-foundation.md  phase2-screens.md  phase3-activity-log.md
docs/archive/: PLAN_GAPS.md  PLAN_OUTLINE.md
scripts/: generate-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_log.rs  ai.rs  category.rs  commands.rs  db.rs  document_type.rs  lib.rs  main.rs  recovery.rs  scanner.rs
src-tauri/src/document_parser/: docx.rs  mod.rs  pdf.rs  pptx.rs  text.rs
src/components/: ActivityLog.tsx  CrashRecoveryDialog.tsx  LanguageSwitcher.tsx  Stepper.tsx
src/components/ui/: button.tsx  checkbox.tsx  index.ts  input.tsx  progress.tsx  select.tsx
src/i18n/: en.json  es-MX.json  index.tsx
src/screens/: ApplyingChangesScreen.tsx  DashboardScreen.tsx  DetailedReviewScreen.tsx  FileTypesScreen.tsx  FolderSelectionScreen.tsx  HomeScreen.tsx  OrganizationStylesScreen.tsx  PersonalizationScreen.tsx  PlanPreviewScreen.tsx  QuickFixesScreen.tsx  ResultsScreen.tsx  ScanningScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx  SuccessScreen.tsx  WelcomeScreen.tsx  index.ts
src/services/: activityLog.ts
src/store/: appState.tsx
src/types/: category.ts
src/utils/: modeSelection.ts
