[package]
name = "ai-filesense"
version = "1.0.0"
description = "AI-powered file organization and search"
authors = ["AI FileSense"]
edition = "2021"

[lib]
name = "ai_filesense_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
dotenvy = "0.15"

# Document parsing (Phase 1 & 2)
zip = "2.1"                    # For extracting .docx, .pptx (Office Open XML)
quick-xml = "0.36"             # For parsing XML inside Office documents
pdf-extract = "0.7"            # For extracting text from PDFs

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
